@@ -770,6 +770,10 @@ Rboolean R_ToplevelExec(void (*fun)(void *), void *data)
     return result;
 }
 
+/* Return the current environment. */
+SEXP R_GetCurrentEnv() {
+    return R_GlobalContext->sysparent;
+}
 
 
 /*
